--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,12 @@
 [build]
-  command = "cd frontend && npm install && npm run build"
+  command = "npm install --prefix frontend && npm --prefix frontend run build"
   publish = "frontend/dist"
   functions = "netlify/functions"
 
 [dev]
-  command = "cd frontend && npm run dev"
+  command = "npm --prefix frontend run dev"
   port = 3000
-  targetPort = 3000
+  targetPort = 5173
   publish = "frontend/dist"
   autoLaunch = false
 
